# HackRadar

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.py
adapters/: devfolio.py  devpost.py  dorahacks.py  mlh.py  unstop.py
backend/: crud.py  db.py  main.py  models.py  scheduler.py  schemas.py
docker/: entrypoint.sh
tasks/: fetch_and_store.py
